feat: add asynchronous test run jobs
